@@ -169,8 +169,9 @@ function load_optpage_data_folder() {
         'caption' => _("Show Clock on Folders Panel"),
         'type'    => SMOPT_TYPE_STRLIST,
         'refresh' => SMOPT_REFRESH_FOLDERLIST,
-        'posvals' => array( '1' => 'MM/DD/YY HH:MM',
-                            '2' => 'DD/MM/YY HH:MM',
+        'posvals' => array( '0' => _("International date and time"),
+			    '1' => _("American date and time"),
+                            '2' => _("European date and time"),
                             '3' => _("Show weekday and time"),
                             '4' => _("Show time with seconds"),
                             '5' => _("Show time"),
