@@ -34,6 +34,7 @@ Version 1.4.3 - CVS
   - Make writing of preferences, abook, calendars fail better when disk full
     (#915527).
   - Fix quoteimap() regex escaping problem (#921291).
+  - Added international date format support (#927264).
 
 Version 1.4.2 - 1 October 2003
 ------------------------------
